# ant_colony

./: .gitignore  Cargo.toml  activate.bat  archive.txt  aucuneideedequoifairedeca  config.json  data.ipynb  gen_tree_png.cmd  generate_graphs.py  gnn_test.ipynb  gnn_test.py  graph.dot  pseudocode.txt  pseudocode2.txt  result_archive  result_archive.txt  sim_mat.py  test.graph  test_prog.py  trace.json  tree.dot  tree2.dot  unlabeled_result-vns_mode0.json
.ipynb_checkpoints/: data-checkpoint.ipynb  gnn_test-checkpoint.ipynb
data/: convert.py  facebook_converted.graph
results_share/: BA_1000_10879_relabel_shuffle.txt_result-aco_hybrid.json  BA_1000_10879_relabel_shuffle.txt_result-beuh.json  BA_1000_10879_relabel_shuffle.txt_result-greedy.json  BA_1000_10879_relabel_shuffle.txt_result-vns_mode0.json  BA_1000_10879_relabel_shuffle.txt_result-vns_mode1.json  BA_1000_10879_relabel_shuffle.txt_result-vns_mode2.json  BA_1000_12831_relabel_shuffle.txt_result-aco_hybrid.json  BA_1000_12831_relabel_shuffle.txt_result-beuh.json  BA_1000_12831_relabel_shuffle.txt_result-greedy.json  BA_1000_12831_relabel_shuffle.txt_result-vns_mode0.json  BA_1000_12831_relabel_shuffle.txt_result-vns_mode1.json  BA_1000_12831_relabel_shuffle.txt_result-vns_mode2.json  BA_1000_17676_relabel_shuffle.txt_result-aco_hybrid.json  BA_1000_17676_relabel_shuffle.txt_result-beuh.json  BA_1000_17676_relabel_shuffle.txt_result-greedy.json  BA_1000_17676_relabel_shuffle.txt_result-vns_mode0.json  BA_1000_17676_relabel_shuffle.txt_result-vns_mode1.json  BA_1000_17676_relabel_shuffle.txt_result-vns_mode2.json  (+79 more)
(+60 files in other folders)
