[package]
name = "ant_colony"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "*"
rand_xoshiro = "*"
rustworkx-core = "*"
petgraph = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bincode = "*"
glob = "*"

[profile.release]
debug = false
overflow-checks = true

[features]
no_distorsion_approx = []
distorsion_approx = []
distorsion_approx_no_ebc = []

