[package]
name = "ant_colony"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "*"
rand_xoshiro = "*"
rustworkx-core = "*"
petgraph = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bincode = "*"
glob = "*"

[profile.release]
debug = false
overflow-checks = false

[features]
default = []
use_heuristic = []
need_ebc = []
need_tarjan = []
ebc_stretch_heuristic = ["use_heuristic", "need_ebc", "need_tarjan"]
stretch_heuristic = ["use_heuristic", "need_tarjan"]
mean_path_heuristic = ["use_heuristic"]
verbose = []
enable_counters = []

